# BatchLibraryBot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  logger.py  utils.py
app/data/: config.py
app/database/: base.py
app/database/models/: __init__.py  course.py  ordinal.py  scene.py
app/handlers/: __init__.py  archive.py  bot.py  channel.py  commands.py  inline_query.py
app/middlewares/: __init__.py  channel.py
app/scene/: __init__.py  browse.py  img2pdf.py
scripts/: addCourse.py  migration.py
