[project]
name = "batch7librarybot"
version = "0.1.0"
description = "A management bot for my Batch that stores study materials, notes, and summaries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "async-lru>=2.0.5",
    "beanie>=2.0.1",
    "environs>=14.5.0",
    "fastapi>=0.123.9",
    "olefile>=0.47",
    "pillow>=12.0.0",
    "rapidfuzz>=3.14.3",
    "uvicorn>=0.38.0",
]


[tool.pyright]
typeCheckingMode = "basic"
